Bug#39117 "plugin_load" option not documented

correct text describing the --plugin-load option to mysqld